--- a/Scripts/mesopelagic.results.Rmd
+++ b/Scripts/mesopelagic.results.Rmd
@@ -1262,14 +1262,56 @@ ccfvalues$lag[which(ccfvalues$acf > max.pmc-0.01 & ccfvalues$acf < max.pmc+0.01)
 # Produces the output: [1] -3
 
 
+#Very high autocorrelation
+acf(mesos)
+acf(hake)
+acf(cephalopods)
+
+
 ```
 
 #Interpretation: horizontal blue lines are the approximate CIs
 #Ts.intersect: Binds several time series together into a single multivariate time series whose time domain is the intersection of the time domains of the component series.
 
-#Statistics: Time series with behavior trend 2
 
 ```{r}
-diet proportion stuff!!!
+library(lmtest) #  this provides the grangertest
+library(TSA) #  This provides the pre-whiten function, and one form of simple 
+# access to the fitted model series.
+library(tseries) #  provides the kpss.test of stationarity 
+
+
+# plot both series without time shift.
+ccfxy=ccf(mesos, cephalopods, plot=F,lag.max=30)
+maxlag<-ccfxy$lag[abs(ccfxy$acf)==max(abs(ccfxy$acf))]
+print(maxlag)
+signswap<-sign(ccfxy[maxlag]$acf) # we can later swap the sign of a series if 
+# maxlag has  a negative coefficient; if so the sign function gives -1.  
+print(signswap)
+
+N<-600
+phi <- 0.90
+x <- arima.sim(n = N, list(ar = c(phi)),sd = 1)
+y <- arima.sim(n = N, list(ar = c(phi)),sd = 1)
+
+pdf("Figure1.pdf")
+par(mfrow=c(2,1))
+xylimit<-max(abs(c(x,y)))
+ts.plot(x,ylim=c(-xylimit,xylimit),ylab="",main="(a) Two independent autoregressions")
+lines(y,col="red")
+abline(h=0)
+
+ccfxy=ccf(x,y, plot=F,lag.max=30)
+maxlag<-ccfxy$lag[abs(ccfxy$acf)==max(abs(ccfxy$acf))]
+print(maxlag)
+signswap<-sign(ccfxy[maxlag]$acf) # we can later swap the sign of a series if 
+# maxlag has  a negative coefficient; if so the sign function gives -1.  
+print(signswap)
+
+install.packages("arima.sim")
+
+
+
 ```
+
 
