--- a/Scripts/final.code.monte.R.Rmd
+++ b/Scripts/final.code.monte.R.Rmd
@@ -13,7 +13,8 @@ library(goft)
 
 #Import data on price from 2007-2016 for commercially valuable predators 
 ```{r}
-at_sea_price <- read_excel("~/Documents/WHOI/Excel/at.sea.price.xlsx")
+at_sea_price <- read_excel("../Data/at.sea.price.xlsx")
+
 ```
 
 #Vectors for commercially valuable predators
